--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
+# OS / editor
 .DS_Store
-*.tmp
-*.bak
+Thumbs.db
+.vscode/
+.idea/
+
+# Python
 __pycache__/
+*.py[cod]
+*.pyd
+*.pyo
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Jupyter
 .ipynb_checkpoints/
+
+# MkDocs build output
 site/
+
+# Logs
+*.log
+
