--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,25 @@
 site_name: Prompt Pattern Library
 site_description: Canonical taxonomy + atomic prompt pattern reference
+
 docs_dir: docs
 site_dir: site
-nav:
-  - Home: index.md
-  - Patterns: patterns/_index.md
+
+repo_url: https://github.com/CevenJKnowles/prompt-pattern-library
+edit_uri: edit/main/docs/
+
+theme:
+  name: material
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.sections
+    - navigation.expand
+    - content.action.edit
+
+plugins:
+  - search
+  - awesome-pages
+
 markdown_extensions:
   - toc:
       permalink: true
